.D........ [ZBX-5166] replaced '-' with '\-' in man-pages (Andris)
...G...PS. [ZBX-8391] added stronger command-line parameter validation, revised help and version messages, revised man-pages for Zabbix server, proxy, agent, sender and get utilities (Andris)
....I..... [ZBX-8658] made various changes to ODBC related m4 scripts to improve readability and library function availability (Juris)

--------------------------------------------------------------------------------
Changes for 2.4.4rc1

New features:
.......PS. [ZBXNEXT-2354] separated VMware performance collector based statistic retrieval from VMware data retrieval and added items to monitor custom performance counters (wiper)
A.F....... [ZBX-1357] enabled Chinese (China) locale to be displayed by default (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Japanese, Korean, Polish and Slovak translations; thanks to Zabbix translators (Richlv)
A.F....PS. [ZBXNEXT-2160] added support for extended IP ranges in network discovery and action conditions (Ivo, Sasha, Wiper)

Bug fixes:
A.F....... [ZBX-9224] fixed audit log for failed login attempts (Oleg)
...G...... [ZBX-9233] fixed processing of bogus negative value of performance couter (igors)
.......PS. [ZBXNEXT-2354] fixed VMware virtual machine network and disk transmission rates being reported in kilobytes rather than bytes (wiper)
..F....... [ZBX-8930] fixed map import displaying incorrect message when map had non-existing sub elements (Oleg)
A.F....... [ZBX-8448] fixed host and template permissions validation when an object belongs to both read and read-write groups (Ivo)
..F....... [ZBX-8448] added read-only groups in host and template edit forms as grayed out when object belongs to both read and read-write groups (Ivo)
..F....... [ZBX-8448] fixed template edit form losing host and template linkages by adding grayed out objects when they belong to both read and read-write groups (Ivo)